force-app/main/default/objects/PDE__c/PDE__c.object-meta.xml
<CustomObject>
    <description>Point d&apos;Energie</description>
    <label>Point d&apos;énergie</label>
    <nameField>
        <label>Nom du Site</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Points d&apos;énergie</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>