force-app/main/default/objects/PDE__c/fields/ACD_valide__c.field-meta.xml
<CustomField>
    <fullName>ACD_valide__c</fullName>
    <description>Calcul si on se trouve à moins de 12 mois de la date de signature de l&apos;ACD</description>
    <formula>TODAY() &lt; ADDMONTHS(Date_signature_ACD__c,12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACD valide ?</label>
    <type>Checkbox</type>
</CustomField>