force-app/main/default/objects/PDE__c/fields/Adresse_de_consommation__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_consommation__c</fullName>
    <formula>NumeroVoie__c &amp;&quot; &quot;&amp; voie__c &amp;&quot; &quot;&amp; Code_Postal__c &amp;&quot; &quot;&amp; Ville__c</formula>
    <label>Adresse de consommation</label>
    <type>Text</type>
</CustomField>