force-app/main/default/objects/PDE__c/fields/Ancienne_date_echeance__c.field-meta.xml
<CustomField>
    <fullName>Ancienne_date_echeance__c</fullName>
    <description>Date d&apos;échéance du contrat précédent</description>
    <label>Ancienne date d&apos;échéance</label>
    <type>Date</type>
</CustomField>