force-app/main/default/objects/PDE__c/fields/AppelEnCours__c.field-meta.xml
<CustomField>
    <fullName>AppelEnCours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Définit si un appel vers Homeys est en cours pour l&apos;optimisation TURPE</description>
    <inlineHelpText>Définit si un appel vers Homeys est en cours pour l&apos;optimisation TURPE</inlineHelpText>
    <label>Appel en cours ?</label>
    <type>Checkbox</type>
</CustomField>