force-app/main/default/objects/PDE__c/fields/BudgetTotalActuel__c.field-meta.xml
<CustomField>
    <fullName>BudgetTotalActuel__c</fullName>
    <label>Budget Total Actuel (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>