force-app/main/default/objects/PDE__c/fields/BudgetTotalOptimal__c.field-meta.xml
<CustomField>
    <fullName>BudgetTotalOptimal__c</fullName>
    <label>Budget Total Optimal (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>