force-app/main/default/objects/PDE__c/fields/Calcul_PS_Max_OK__c.field-meta.xml
<CustomField>
    <fullName>Calcul_PS_Max_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calcul PS Max OK ?</label>
    <type>Checkbox</type>
</CustomField>