force-app/main/default/objects/PDE__c/fields/Calendrier_fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Calendrier_fournisseur__c</fullName>
    <label>Calendrier fournisseur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>HP/HC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>