force-app/main/default/objects/PDE__c/fields/CARGaz__c.field-meta.xml
<CustomField>
    <fullName>CARGaz__c</fullName>
    <label>CAR Gaz</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>