force-app/main/default/objects/PDE__c/fields/CARGaz_Future__c.field-meta.xml
<CustomField>
    <fullName>CARGaz_Future__c</fullName>
    <label>CAR Gaz Future</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>