force-app/main/default/objects/PDE__c/fields/CJA__c.field-meta.xml
<CustomField>
    <fullName>CJA__c</fullName>
    <label>CJA</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>