force-app/main/default/objects/PDE__c/fields/CJA_Journaliere__c.field-meta.xml
<CustomField>
    <fullName>CJA_Journaliere__c</fullName>
    <label>CJA Journalière</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>