force-app/main/default/objects/PDE__c/fields/CJA_Menuselle__c.field-meta.xml
<CustomField>
    <fullName>CJA_Menuselle__c</fullName>
    <label>CJA Menuselle</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>