force-app/main/default/objects/PDE__c/fields/Code_Postal__c.field-meta.xml
<CustomField>
    <fullName>Code_Postal__c</fullName>
    <label>Code Postal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>