force-app/main/default/objects/PDE__c/fields/Conso_HCH__c.field-meta.xml
<CustomField>
    <fullName>Conso_HCH__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Conso HCH</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>