force-app/main/default/objects/PDE__c/fields/ConsoHP__c.field-meta.xml
<CustomField>
    <fullName>ConsoHP__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Conso HP</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>