force-app/main/default/objects/PDE__c/fields/Consommation_Annuelle_de_R_f_rence_Elec__c.field-meta.xml
<CustomField>
    <fullName>Consommation_Annuelle_de_R_f_rence_Elec__c</fullName>
    <label>CAR Elec</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>