force-app/main/default/objects/PDE__c/fields/Consommation_Journaliere_Plafond__c.field-meta.xml
<CustomField>
    <fullName>Consommation_Journaliere_Plafond__c</fullName>
    <label>Consommation Journalière Plafond</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>