force-app/main/default/objects/PDE__c/fields/Contrat_actif__c.field-meta.xml
<CustomField>
    <fullName>Contrat_actif__c</fullName>
    <formula>IF(AND(NOT(ISNULL(DateEcheanceContract__c)), TODAY()&lt;= DateEcheanceContract__c), true, false)</formula>
    <inlineHelpText>Ce champs signifie que le PDE est associé à un contrat signé par ADE/PWE dont la date de fin de contrat n&apos;est pas encore dépassée.</inlineHelpText>
    <label>Contrat actif</label>
    <type>Checkbox</type>
</CustomField>