force-app/main/default/objects/PDE__c/fields/Date_debut_releve__c.field-meta.xml
<CustomField>
    <fullName>Date_debut_releve__c</fullName>
    <label>Date début relève</label>
    <type>Date</type>
</CustomField>