force-app/main/default/objects/PDE__c/fields/Date_derniere_modification_FTA__c.field-meta.xml
<CustomField>
    <fullName>Date_derniere_modification_FTA__c</fullName>
    <label>Date dernière modification FTA</label>
    <type>Date</type>
</CustomField>