force-app/main/default/objects/PDE__c/fields/Date_fin_releve__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_releve__c</fullName>
    <label>Date fin relève</label>
    <type>Date</type>
</CustomField>