force-app/main/default/objects/PDE__c/fields/Date_MAJ_Enedis__c.field-meta.xml
<CustomField>
    <fullName>Date_MAJ_Enedis__c</fullName>
    <label>Date maj conso Enedis</label>
    <type>Date</type>
</CustomField>