force-app/main/default/objects/PDE__c/fields/Date_MES__c.field-meta.xml
<CustomField>
    <fullName>Date_MES__c</fullName>
    <description>Date Mise En Service</description>
    <label>Date MES</label>
    <type>Date</type>
</CustomField>