force-app/main/default/objects/PDE__c/fields/Date_publication_tarif__c.field-meta.xml
<CustomField>
    <fullName>Date_publication_tarif__c</fullName>
    <label>Date de publication du tarif</label>
    <type>Date</type>
</CustomField>