force-app/main/default/objects/PDE__c/fields/Date_signature_ACD__c.field-meta.xml
<CustomField>
    <fullName>Date_signature_ACD__c</fullName>
    <label>Date de signature de l&apos;ACD</label>
    <type>Date</type>
</CustomField>