force-app/main/default/objects/PDE__c/fields/DateAppel__c.field-meta.xml
<CustomField>
    <fullName>DateAppel__c</fullName>
    <description>Date à laquelle un appel Homeys a été effectué</description>
    <inlineHelpText>Date à laquelle un appel Homeys a été effectué</inlineHelpText>
    <label>Date de l&apos;Appel</label>
    <type>Date</type>
</CustomField>