force-app/main/default/objects/PDE__c/fields/DateCalculPsMax__c.field-meta.xml
<CustomField>
    <fullName>DateCalculPsMax__c</fullName>
    <label>Date calcul des PS Max</label>
    <type>Date</type>
</CustomField>