force-app/main/default/objects/PDE__c/fields/DateCalculPsMaxSansErreur__c.field-meta.xml
<CustomField>
    <fullName>DateCalculPsMaxSansErreur__c</fullName>
    <label>Date calcul des PS Max (Sans erreur)</label>
    <type>Date</type>
</CustomField>