force-app/main/default/objects/PDE__c/fields/DateDebutCourbePsMax__c.field-meta.xml
<CustomField>
    <fullName>DateDebutCourbePsMax__c</fullName>
    <label>Date de début courbe Ps Max</label>
    <type>Date</type>
</CustomField>