force-app/main/default/objects/PDE__c/fields/DateEcheance__c.field-meta.xml
<CustomField>
    <fullName>DateEcheance__c</fullName>
    <description>Date d&apos;échéance du compteur</description>
    <label>Date d&apos;échéance actuelle</label>
    <type>Date</type>
</CustomField>