force-app/main/default/objects/PDE__c/fields/DateEcheanceContract__c.field-meta.xml
<CustomField>
    <fullName>DateEcheanceContract__c</fullName>
    <description>Date d&apos;échéance du contrat actuel</description>
    <label>Date échéance contrat actuel</label>
    <type>Date</type>
</CustomField>