force-app/main/default/objects/PDE__c/fields/DateFinCourbePsMax__c.field-meta.xml
<CustomField>
    <fullName>DateFinCourbePsMax__c</fullName>
    <label>Date de fin courbe des Ps Max</label>
    <type>Date</type>
</CustomField>