force-app/main/default/objects/PDE__c/fields/Demande_Cotation__c.field-meta.xml
<CustomField>
    <fullName>Demande_Cotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demande de cotation</label>
    <referenceTo>Demande_Cotation__c</referenceTo>
    <relationshipLabel>Points d&apos;énergie</relationshipLabel>
    <relationshipName>Points_energie</relationshipName>
    <type>Lookup</type>
</CustomField>