force-app/main/default/objects/PDE__c/fields/DepassementActuel__c.field-meta.xml
<CustomField>
    <fullName>DepassementActuel__c</fullName>
    <label>Dépassement Actuel (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>