force-app/main/default/objects/PDE__c/fields/DepassementOptimal__c.field-meta.xml
<CustomField>
    <fullName>DepassementOptimal__c</fullName>
    <label>Dépassement Optimal (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>