force-app/main/default/objects/PDE__c/fields/EconomieIdentifie__c.field-meta.xml
<CustomField>
    <fullName>EconomieIdentifie__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Economie identifiée (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>