force-app/main/default/objects/PDE__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email a notifier lors de la mise à jour du TURPE par Homeys</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>