force-app/main/default/objects/PDE__c/fields/Entite_facturation__c.field-meta.xml
<CustomField>
    <fullName>Entite_facturation__c</fullName>
    <label>Entité de facturation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fournisseur__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENGIE E &amp; C</fullName>
            </value>
            <value>
                <fullName>ENGIE GC PRIVE</fullName>
            </value>
            <value>
                <fullName>ENGIE GC PUBLIC</fullName>
            </value>
            <value>
                <fullName>ENGIE PRO</fullName>
            </value>
            <value>
                <fullName>SEFE Energy</fullName>
            </value>
            <value>
                <fullName>SEFE INCUBATEUR</fullName>
            </value>
            <value>
                <fullName>PRIMEO ENERGIE PEF</fullName>
            </value>
            <value>
                <fullName>PRIMEO ENERGIE PEGC</fullName>
            </value>
            <value>
                <fullName>Endesa</fullName>
            </value>
            <value>
                <fullName>ENDESA GC</fullName>
            </value>
            <value>
                <fullName>TOTAL HORIZON</fullName>
            </value>
            <value>
                <fullName>TOTAL GC</fullName>
            </value>
            <value>
                <fullName>VATTENFALL BLEU PRO</fullName>
            </value>
            <value>
                <fullName>VATTENFALL GC</fullName>
            </value>
            <value>
                <fullName>OHM Grille</fullName>
            </value>
            <value>
                <fullName>OHM Mid Market</fullName>
            </value>
            <value>
                <fullName>OHM GC</fullName>
            </value>
            <value>
                <fullName>Gaz Européen Paris</fullName>
            </value>
            <value>
                <fullName>Gaz Européen Lyon</fullName>
            </value>
            <value>
                <fullName>Gaz Européen Sud</fullName>
            </value>
            <value>
                <fullName>Gaz Européen Sud-Ouest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>