force-app/main/default/objects/PDE__c/fields/EntiteJuridique__c.field-meta.xml
<CustomField>
    <fullName>EntiteJuridique__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Un pde ne peut pas être rattaché à un Syndic</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>notEqual</operation>
            <value>Syndic</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Points d&apos;énergie</relationshipLabel>
    <relationshipName>PDE</relationshipName>
    <type>Lookup</type>
</CustomField>