force-app/main/default/objects/PDE__c/fields/EnvelopeUUID__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeUUID__c</fullName>
    <description>UUID de l&apos;Enveloppe DocuSign</description>
    <externalId>true</externalId>
    <inlineHelpText>UUID de l&apos;Enveloppe DocuSign</inlineHelpText>
    <label>Envelope UUID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>