force-app/main/default/objects/PDE__c/fields/Etat_contractuel__c.field-meta.xml
<CustomField>
    <fullName>Etat_contractuel__c</fullName>
    <label>État contractuel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>