force-app/main/default/objects/PDE__c/fields/Fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Fournisseur__c</fullName>
    <label>Fournisseur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fournisseur</valueSetName>
    </valueSet>
</CustomField>