force-app/main/default/objects/PDE__c/fields/Frequence__c.field-meta.xml
<CustomField>
    <fullName>Frequence__c</fullName>
    <description>Fréquence du compteur (1M / 6M)</description>
    <label>Fréquence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>