force-app/main/default/objects/PDE__c/fields/GRDF_Date_fin_droit_acces__c.field-meta.xml
<CustomField>
    <fullName>GRDF_Date_fin_droit_acces__c</fullName>
    <label>GRDF: Date fin droit d&apos;accès</label>
    <type>Date</type>
</CustomField>