force-app/main/default/objects/PDE__c/fields/GRDF_Droit_Acces_Expire__c.field-meta.xml
<CustomField>
    <fullName>GRDF_Droit_Acces_Expire__c</fullName>
    <formula>GRDF_Date_fin_droit_acces__c = TODAY()</formula>
    <label>GRDF : Droit Accès Expiré</label>
    <type>Checkbox</type>
</CustomField>