force-app/main/default/objects/PDE__c/fields/GRDF_Erreur_donnees_techniques__c.field-meta.xml
<CustomField>
    <fullName>GRDF_Erreur_donnees_techniques__c</fullName>
    <label>GRDF: Erreur données techniques</label>
    <length>255</length>
    <type>Text</type>
</CustomField>