force-app/main/default/objects/PDE__c/fields/GRDF_Id_Droit_Acces__c.field-meta.xml
<CustomField>
    <fullName>GRDF_Id_Droit_Acces__c</fullName>
    <label>GRDF: Id droit d&apos;accès</label>
    <length>255</length>
    <type>Text</type>
</CustomField>