force-app/main/default/objects/PDE__c/fields/GRDF_Statut_Donnees_Techniques__c.field-meta.xml
<CustomField>
    <fullName>GRDF_Statut_Donnees_Techniques__c</fullName>
    <label>GRDF: Statut données techniques</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GRDF_Statut_API_Tech_Contrat</valueSetName>
    </valueSet>
</CustomField>