force-app/main/default/objects/PDE__c/fields/GRDF_Statut_Droit_Acces__c.field-meta.xml
<CustomField>
    <fullName>GRDF_Statut_Droit_Acces__c</fullName>
    <label>GRDF: Statut droit d&apos;accès</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demande d&apos;accès en attente de validation</fullName>
            </value>
            <value>
                <fullName>Demande d&apos;accès validée</fullName>
            </value>
            <value>
                <fullName>Demande d&apos;accès rejetée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>