force-app/main/default/objects/PDE__c/fields/HCEActuel__c.field-meta.xml
<CustomField>
    <fullName>HCEActuel__c</fullName>
    <label>HCE Actuel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>