force-app/main/default/objects/PDE__c/fields/HPEActuel__c.field-meta.xml
<CustomField>
    <fullName>HPEActuel__c</fullName>
    <label>HPE Actuel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>