force-app/main/default/objects/PDE__c/fields/HPEOptimal__c.field-meta.xml
<CustomField>
    <fullName>HPEOptimal__c</fullName>
    <label>HPE Optimal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>