force-app/main/default/objects/PDE__c/fields/HPHOptimal__c.field-meta.xml
<CustomField>
    <fullName>HPHOptimal__c</fullName>
    <label>HPH Optimal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>