force-app/main/default/objects/PDE__c/fields/Identifiant_PITD__c.field-meta.xml
<CustomField>
    <fullName>Identifiant_PITD__c</fullName>
    <label>Identifiant PITD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>