force-app/main/default/objects/PDE__c/fields/IdSource__c.field-meta.xml
<CustomField>
    <fullName>IdSource__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ID Externe utilisé par les process Homeys pour le TURPE</description>
    <externalId>true</externalId>
    <label>Id Source</label>
    <length>24</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>