force-app/main/default/objects/PDE__c/fields/InterventionPEPS__c.field-meta.xml
<CustomField>
    <fullName>InterventionPEPS__c</fullName>
    <label>Intervention PEP&apos;S (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>