force-app/main/default/objects/PDE__c/fields/Message_retour_optimisation_TURPE__c.field-meta.xml
<CustomField>
    <fullName>Message_retour_optimisation_TURPE__c</fullName>
    <description>Message renvoyé par l&apos;API Homeys concernant l&apos;optimisation TURPE</description>
    <label>Message retour optimisation TURPE</label>
    <type>TextArea</type>
</CustomField>