force-app/main/default/objects/PDE__c/fields/Nom_du_compte__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_compte__c</fullName>
    <formula>EntiteJuridique__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom du compte</label>
    <type>Text</type>
</CustomField>