force-app/main/default/objects/PDE__c/fields/Numero_Affaire_SGE__c.field-meta.xml
<CustomField>
    <fullName>Numero_Affaire_SGE__c</fullName>
    <label>Numéro d&apos;affaire SGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>