force-app/main/default/objects/PDE__c/fields/NumeroEtVoie__c.field-meta.xml
<CustomField>
    <fullName>NumeroEtVoie__c</fullName>
    <label>Voie</label>
    <length>155</length>
    <type>Text</type>
</CustomField>