force-app/main/default/objects/PDE__c/fields/NumeroVoie__c.field-meta.xml
<CustomField>
    <fullName>NumeroVoie__c</fullName>
    <label>Numéro voie</label>
    <length>20</length>
    <type>Text</type>
</CustomField>