force-app/main/default/objects/PDE__c/fields/PartFixeCSActuel__c.field-meta.xml
<CustomField>
    <fullName>PartFixeCSActuel__c</fullName>
    <label>Part Fixe de la CS Actuel (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>