force-app/main/default/objects/PDE__c/fields/PartFixeCSOptimal__c.field-meta.xml
<CustomField>
    <fullName>PartFixeCSOptimal__c</fullName>
    <label>Part Fixe de la CS Optimal (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>