force-app/main/default/objects/PDE__c/fields/PartVariableCSOptimal__c.field-meta.xml
<CustomField>
    <fullName>PartVariableCSOptimal__c</fullName>
    <label>Part Variable de la CS Optimal (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>