force-app/main/default/objects/PDE__c/fields/PCE_Refonte__c.field-meta.xml
<CustomField>
    <fullName>PCE_Refonte__c</fullName>
    <label>PCE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>