force-app/main/default/objects/PDE__c/fields/POINTEActuel__c.field-meta.xml
<CustomField>
    <fullName>POINTEActuel__c</fullName>
    <label>POINTE Actuel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>