force-app/main/default/objects/PDE__c/fields/Premiere_mise_en_service__c.field-meta.xml
<CustomField>
    <fullName>Premiere_mise_en_service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Première mise en service</label>
    <type>Checkbox</type>
</CustomField>