force-app/main/default/objects/PDE__c/fields/PSMaxActive__c.field-meta.xml
<CustomField>
    <fullName>PSMaxActive__c</fullName>
    <label>PS Max Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>