force-app/main/default/objects/PDE__c/fields/PSMaxCapacitive__c.field-meta.xml
<CustomField>
    <fullName>PSMaxCapacitive__c</fullName>
    <label>PS Max Capacitive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>