force-app/main/default/objects/PDE__c/fields/PSMaxInductive__c.field-meta.xml
<CustomField>
    <fullName>PSMaxInductive__c</fullName>
    <label>PS Max Inductive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>