force-app/main/default/objects/PDE__c/fields/Puissance_raccordement_soutirage__c.field-meta.xml
<CustomField>
    <fullName>Puissance_raccordement_soutirage__c</fullName>
    <label>Puissance raccordement soutirage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>